--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Fantasy Name Forge</title>
+    <meta name="description" content="Generate epic fantasy names and character backstories." />
+
+    <!-- Google Fonts: Medieval Flair -->
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet" />
+
+    <!-- Optional: Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <style>
+      body {
+        margin: 0;
+        font-family: 'Cinzel', serif;
+        background: url('/assets/images/parchment-bg.jpg') center center / cover no-repeat fixed;
+        color: #2c2c2c;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
